<resources>

    <string name="app_name">Photo Screensaver</string>
    <string name="screensaver_name">Photos</string>

    <string name="pref_key_discover_automatically">prefs_discover_automatically</string>
    <string name="pref_title_discover_automatically">Discover available servers</string>

    <string name="pref_key_send_wake_on_lan">prefs_send_wake_on_lan</string>
    <string name="pref_title_send_wake_on_lan">Wake-on-LAN</string>

    <string name="pref_key_available_servers">prefs_available_servers</string>
    <string name="pref_title_available_servers">Available servers</string>

    <string name="pref_key_server_settings">prefs_server_settings</string>
    <string name="pref_title_server_settings">Server settings</string>

    <string name="pref_key_server_host">prefs_server_host</string>
    <string name="pref_title_server_host">Host</string>

    <string name="pref_key_server_port">prefs_server_port</string>
    <string name="pref_title_server_port">Port</string>

    <string name="pref_key_server_mac_address">prefs_server_mac_address</string>
    <string name="pref_title_server_mac_address">MAC Address</string>

    <string name="error_title">Oops! There was an error :(</string>

</resources>
